--- a/功能/其他 - 设置.md
+++ b/功能/其他 - 设置.md
@@ -1,150 +1,94 @@
-### 1. 痛点与动机
+#### 1. 痛点与动机 (Pain Points & Motivations)
 
-- 
-- **痛点**：
-  - 
-  - 用户无法直观了解当前视频库占用了多少磁盘空间。
-  - 核心路径（如待删除、截图导出）配置在 JSON 中，用户在软件内无法快速确认当前路径指向何处。
-  - 硬编码的快捷键可能与用户的其他软件冲突，或不符合个人的操作习惯。
-- **动机**：
-  - 
-  - 提供一个统一的**信息面板**，对视频资产规模进行统计。
-  - 提供**路径只读预览**，确保用户知道文件流转的目的地，同时避免运行时修改路径导致的文件丢失风险。
-  - 实现**自定义快捷键**系统，赋予用户完全的控制权，并内置智能冲突检测以保证系统稳定性。
+- **痛点**:
+  - 用户无法直观地了解其视频库的整体规模，包括文件数量和磁盘占用。
+  - 核心文件路径配置在 JSON 文件中，用户在软件内无法快速确认或访问这些目录。
+  - 固定的快捷键无法满足所有用户的个性化操作习惯，且可能与其他常用软件冲突。
+- **动机**:
+  - 提供一个集中的**信息与配置中心**。
+  - 通过**资产统计**面板，让用户对自己的视频库规模有清晰的认识。
+  - 通过**路径概览**，提供关键目录的只读预览和一键访问功能，增强透明度和易用性。
+  - 实现一个强大且安全的**自定义快捷键系统**，支持上下文配置和智能冲突检测，将操作的完全控制权交给用户。
 
-### 2. 功能概要
+#### 2. 功能概要 (Feature Overview)
 
-- 
-- **独立界面**：通过主界面按钮或菜单呼出，通常为模态窗口。
-- **三大模块**：
-  - 
-  - **资产统计**：显示视频总大小。
-  - **路径概览**：只读显示四个关键配置路径。
-  - **快捷键配置**：支持录入、修改及冲突检测。
-- **安全保存**：修改快捷键后，必须通过冲突检测才能写入配置文件。
+- **独立界面**：通过主界面顶部的【设置】页签进入。
+- **三大核心模块**:
+  1. **资产统计 (Asset Statistics)**：显示视频文件总数和累计磁盘大小。
+  2. **路径概览 (Path Overview)**：只读显示所有关键配置路径，并提供快速访问。
+  3. **快捷键配置 (Shortcut Customization)**：支持用户修改全局和特定上下文的快捷键。
+- **安全保存机制**：所有快捷键修改必须通过上下文感知的冲突检测才能成功保存并应用。
 
-### 3. 模块详解
+#### 3. 模块详解 (Module Breakdown)
 
-#### 3.1 视频资产统计 (Storage Statistics)
+此模块提供关于视频库规模的宏观数据。
 
-- 
-- **显示内容**：当前软件已加载/已索引的所有视频文件的**累计磁盘总大小**。
-- **格式**：自动格式化为易读单位（GB, TB）。例如：Total Size: 1.45 TB。
-- **计算时机**：
-  - 
-  - 软件启动扫描时。
-  - 执行 **F5 刷新** 后。
-  - 执行裁剪或删除操作后（动态扣减）。
+- **显示内容**:
+  1. **索引视频总数 (Total Indexed Videos)**：当前软件已索引的所有视频文件的**总数量**。
+  2. **累计磁盘占用 (Total Disk Usage)**：这些视频文件累计占用的**磁盘总空间**，自动格式化为最合适的单位（如 15,231 Files, 1.45 TB）。
+- **数据更新时机**:
+  - 软件启动并完成首次文件扫描时。
+  - 用户在软件内执行 **F5 刷新**操作后。
+  - 执行了添加、裁剪或删除等影响文件数量或大小的操作后。
 
-#### 3.2 路径配置概览 (Path Configuration - Read Only)
+此模块为用户提供关键目录的透明化展示。
 
-- 
-- **交互属性**：**只读（Read-Only）**。
-  - 
-  - 用户不可在此界面修改路径（修改需编辑 setting.json 或在首次启动配置页进行）。
-  - **辅助功能**：每个路径旁提供一个 **“打开文件夹”** 的图标按钮，点击直接呼出资源管理器。
-- **展示的四个核心路径**：
-  1. 
-  2. **待删除目录** (pending_delete_path)：软删除文件的暂存地。
-  3. **已处理/已编辑目录** (processed_path)：裁剪源文件的归档地。
-  4. **截图导出目录** (screenshot_export_path)：Alt+E 导出的目标地。
-  5. **默认截图/数据目录** (data_path 或 video_source)：存放生成的封面、WebP 截图及视频源的根目录。
+- **交互属性**：**只读 (Read-Only)**。用户不可在此界面修改路径，以防运行时发生错误。
+- **辅助功能**：每个路径条目的右侧都有一个**“打开文件夹”**的图标按钮，点击可直接在系统文件浏览器中打开该目录。
+- **展示的核心路径**:
+  1. **视频源根目录 (Video Source)**: video_source
+  2. **数据存储目录 (Data Directory)**: 软件根目录下的 data/
+  3. **待删除目录 (Pending Deletion)**: pending_delete_path
+  4. **已处理归档目录 (Processed Archive)**: processed_path
+  5. **截图导出目录 (Screenshot Export)**: screenshot_export_path
 
-#### 3.3 快捷键设置 (Shortcut Customization)
+这是设置页面的核心，其 UI 设计必须能清晰地反映 setting.json 中上下文敏感的结构。
 
-- 
-- **UI 布局**：两列布局。
-  - 
-  - 左侧：**功能名称**（如“播放/暂停”、“截图”、“步进”、“旋转”）。
-  - 右侧：**输入框**（显示当前键位，点击可录入新键）。
-- **支持配置的动作**：
-  - 
-  - 播放/暂停 (Space)
-  - 截图 (E)
-  - 导出截图 (Alt + E)
-  - 旋转视频 (K)
-  - 裁剪分割 (Q)
-  - 裁剪合并 (Delete)
-  - 步进 - 前进 (D)
-  - 步进 - 后退 (A)
-  - 软删除 (Ctrl + Delete)
-  - 刷新 (F5)
-  - *注：部分系统级组合键可能被保留，不可设置。*
+- **UI 布局**：
+  - **顶部标签页 (Tabs)**：用于在不同的**快捷键上下文**之间切换。例如：[ 全局 ], [ 分配标签对话框 ], [ ...其他对话框 ]。
+  - **内容区域**：每个标签页内，采用**分组列表**的形式展示该上下文下的所有可配置快捷键。
+    - **左侧**：功能分组标题（如“播放控制”）和具体的功能描述（如“播放/暂停”）。
+    - **右侧**：一个特殊的**快捷键输入框**。
 
-### 4. 冲突检测与保存逻辑
+codeCode
 
-为了防止键位冲突导致功能失效，系统在“保存”环节执行严格的校验。
+```
++----------------------------------------------------------------------------------+
+| 快捷键配置                                                                       |
+| +------------------------------------------------------------------------------+ |
+| | [ 全局 (Global) ] [ 分配标签对话框 (Assign Tag Dialog) ]                     | |  <- 上下文标签页
+| +------------------------------------------------------------------------------+ |
+| |                                                                              | |
+| |   ▼ 播放控制 (Play Control)                                                  | |  <- 分组
+| |     播放/暂停 (Toggle Play)                    [ Space           ]           | |  <- 快捷键条目
+| |     前进 (Step Forward)                        [ D               ]           | |
+| |   ▼ 评分与反馈 (Interact)                                                    | |
+| |     点赞 (Like)                              [ F               ]           | |
+| |                                                                              | |
+| +------------------------------------------------------------------------------+ |
++----------------------------------------------------------------------------------+
+```
 
-#### 4.1 校验流程
+- **快捷键录入交互**:
+  1. 用户点击一个快捷键输入框，该输入框进入“**录制模式**”，并显示提示如“请按下快捷键...”。
+  2. 用户在键盘上按下期望的组合键，例如 Ctrl + Shift + F。
+  3. 输入框立即显示 Ctrl+Shift+F 并退出“录制模式”。
 
-1. 
-2. 用户点击 **“保存 (Save)”** 按钮。
-3. **遍历检查**：系统比对所有功能绑定的键值组合。
-4. **冲突判定**：
-   - 
-   - **情况 A：无冲突**
-     - 
-     - 将新的快捷键映射表写入 setting.json。
-     - 立即更新内存中的快捷键监听器（无需重启软件）。
-     - 关闭设置界面，提示“设置已保存”。
+#### 4. 冲突检测与保存逻辑 (Conflict Detection & Save Logic)
+
+为保证系统的稳定性和可预测性，快捷键的保存在设计上是严格且安全的。
+
+1. 用户完成所有修改后，点击页面底部的**【保存】**按钮。
+2. 系统启动**上下文感知冲突检测**：
+   - 冲突检测是在**每一个上下文内部独立进行**的。例如，系统会检查【全局】标签页下的所有快捷键是否有重复，然后再独立检查【分配标签对话框】标签页下的快捷键是否有重复。
+   - **允许跨上下文“重复”**：因此，在【全局】上下文中将 1 绑定到“最近播放”，同时在【分配标签对话框】上下文中将 1 绑定到“快速分配槽位1”，**这不被视为冲突**。
+3. **判定结果**:
+   - **情况 A：无任何冲突**
+     - 将更新后的整个 key_bindings 对象写入 setting.json 文件。
+     - 程序**立即**重新加载快捷键监听器，使用户的修改**无需重启软件即可生效**。
+     - 弹出一个全局Toast提示“设置已保存”，并可选择关闭设置页面。
    - **情况 B：发现冲突**
-     - 
-     - **阻断保存**：不写入文件，设置界面不关闭。
-     - **视觉提示**：
-       - 
-       - 弹出 Toast 或红字提示：“快捷键冲突：[功能A] 与 [功能B] 重复”。
-       - 高亮显示冲突的输入框（例如标红）。
-5. **强制性**：用户必须解决冲突（修改或恢复默认）才能成功保存。
-
-### 5. Setting 配置与数据存储
-
-- 
-
-- **setting.json**：
-
-  - 
-  - **Key Mapping**：建议新增一个 key_bindings 对象，存储所有动作的键码。
-
-  codeJSON
-
-  
-
-  ```
-  "key_bindings": {
-    "toggle_play": "Space",
-    "screenshot": "E",
-    "rotate": "K",
-    "soft_delete": "Ctrl+Delete",
-    ...
-  }
-  ```
-
-  - 
-  - **Fallback**：如果 JSON 中缺少某个键位的配置，软件应加载默认的硬编码快捷键。
-
-### 6. 界面交互流程图
-
-codeMermaid
-
-
-
-```
-graph TD
-    A[进入设置界面] --> B[加载当前配置]
-    B --> C{用户操作}
-    
-    C -- 查看统计 --> D[显示 Total Size]
-    C -- 查看路径 --> E[只读显示路径]
-    E --> F[点击打开文件夹]
-    
-    C -- 修改快捷键 --> G[录入新键位]
-    G --> H[点击保存]
-    
-    H --> I{检测冲突?}
-    I -- 有冲突 --> J[高亮冲突项 + 报错提示]
-    J --> G
-    
-    I -- 无冲突 --> K[写入 setting.json]
-    K --> L[重载快捷键监听]
-    L --> M[关闭界面 + Toast 成功]
-```
+     - **保存被阻断**，不向 setting.json 写入任何内容。
+     - 在冲突发生的上下文标签页内，所有**冲突的快捷键输入框**都会被**红色边框高亮**。
+     - 页面顶部或底部出现一条红色的错误提示信息，明确指出冲突的上下文和功能，例如：“快捷键冲突：在 [全局] 上下文中，‘点赞 (F)’ 与 ‘收藏 (F)’ 使用了相同的快捷键。”
+4. 用户必须手动解决所有高亮的冲突，才能成功保存设置。
