--- a/功能/标签 - 分配.md
+++ b/功能/标签 - 分配.md
@@ -1,150 +1,100 @@
-### 1. 核心目标
+#### 1. 功能概述 (Feature Overview)
 
-该页面是用户管理**当前视频**与**标签库**关系的枢纽。
+**分配标签**是为视频添加元数据的核心枢纽。此功能提供一个高效的、以键盘快捷键为中心的模态对话框，允许用户为当前视频快速地**添加**或**移除**标签。
 
-- 
-- **主要任务**：将已存在的标签“贴”到当前视频上，或将已贴的标签“撕”下来。
-- **次要任务**：当搜索不到现有标签时，作为进入“标签创建流程”的快速入口。
+此对话框引入了“**固化常用标签**”区域，用户可以将个人最高频使用的标签固定在此处，并通过专属快捷键实现一键分配，极大地提升了标签分配的效率。
 
-### 2. UI 布局结构
+#### 2. 触发机制 (Triggering Mechanism)
 
-界面采用 **模态弹窗 (Modal)** 或 **侧边栏 (Sidebar)** 形式，覆盖在视频播放器之上。
+在主播放器界面，当视频正在播放或暂停时，按下快捷键 **Shift+G** (此快捷键可在 setting.json 中配置)，将以模态形式弹出“分配标签”对话框。
 
-#### 2.1 顶部：全局搜索栏
+#### 3. UI 布局与设计原理 (UI Layout & Design Rationale)
 
-- 
-- **功能**：实时过滤标签库。
-- **交互**：支持输入关键词（匹配 texts 和 groupName）。
-- **快捷操作**：如果搜索结果为空，按 Enter 键直接以此关键词触发“标签创建”对话框。
+对话框采用**多区域上下布局**，结构清晰，旨在引导用户完成从“快速选择”到“常规搜索”的流畅操作。
 
-#### 2.2 主体：分组标签展示区
-
-这是核心操作区域，展示从 tags.json 读取的所有标签。
-
-- 
-- **布局方式**：按 **分组 (Group)** 进行区块划分。
-  - 
-  - *Group Header*：显示分组名称（如“风景”、“人物”）。
-  - *Group Body*：网格排列该分组下的所有标签。
-- **排序**：
-  - 
-  - **已选中优先**：当前视频已分配的标签，建议置顶显示或在各分组内前置。
-  - **相关性排序**：在搜索模式下，匹配度高的分组/标签排在前面。
-
-#### 2.3 底部/角落：操作栏
-
-- 
-- **新建按钮**：显式的“新建标签”入口。
-- **确认/关闭**：保存当前分配状态并返回播放。
-
-------
-
-
-
-### 3. 视觉表现 (Visual Representation)
-
-基于统一数据结构，根据 imagePath 是否为空，渲染两种不同的单元格（Card/Chip）：
-
-#### A. 文本标签 (Text Tag)
-
-- 
-- **外观**：胶囊型 (Chip) 或小卡片。
-- **内容**：仅显示主关键词 (texts[0])。
-- **样式**：简约文本，占用空间小。
-
-#### B. 图片标签 (Image Tag)
-
-- 
-- **外观**：矩形卡片 (Card)。
-- **内容**：
-  - 
-  - **缩略图**：加载 imagePath 指向的截图。
-  - **文字覆盖**：在底部或悬浮层显示主关键词 (texts[0])。
-- **优势**：利用视觉记忆快速定位（例如看到“夕阳图”直接点击，而不用看文字）。
-
-#### C. 状态标识 (State Indication)
-
-区分标签是否已分配给当前视频：
-
-- 
-- **未选中 (Default)**：半透明、灰度或低饱和度。
-- **已选中 (Active)**：
-  - 
-  - **高亮边框** (High-contrast border)。
-  - **打钩图标** (Checkmark badge)。
-  - **全彩显示** (针对图片标签)。
-
-------
-
-
-
-### 4. 交互逻辑 (Interaction Logic)
-
-#### 4.1 搜索与过滤
-
-- 
-- **实时性**：输入即响应。
-- **逻辑**：
-  - 
-  - 输入 "海" -> 界面仅保留显示含有“海”字的分组和标签。
-  - 分组内若无匹配项，隐藏该分组标题。
-
-#### 4.2 选取与取消 (Toggle)
-
-- 
-- **单击**：在“已分配”与“未分配”状态间切换。
-  - 
-  - *Assign*：将标签 ID 写入当前视频的元数据。
-  - *Unassign*：从当前视频元数据中移除标签 ID。
-- **批量操作**：用户可以连续点击多个标签，无需每次点击都关闭窗口。
-
-#### 4.3 找不到就创建 (Search to Create)
-
-这是连接“分配”与“创建”的关键桥梁。
-
-- 
-- **场景**：用户搜索 "UFO"，结果显示“无匹配标签”。
-- **操作**：
-  - 
-  - 界面显示提示：“未找到 'UFO'，按 Enter 创建新标签”。
-  - 用户按 Enter。
-  - **跳转**：关闭分配页面，打开 **标签创建页面**。
-  - **数据传递**：将 "UFO" 自动填入创建页面的“描述输入框”中，且作为文本标签的默认值（如果用户此时框选了区域，则转为图片标签创建）。
-
-------
-
-
-
-### 5. 数据处理
-
-- 
-- **读取**：
-  - 
-  - tags.json：获取所有可用标签。
-  - files.json (或当前视频对象)：获取 assigned_tag_ids 列表，用于渲染选中状态。
-- **写入**：
-  - 
-  - 仅更新 files.json 中当前视频的 assigned_tag_ids。
-  - **不修改** tags.json（除非触发了新建流程）。
-
-### 6. 总结流程图
-
-codeMermaid
+- **上部：固化常用区 (Pinned Favorites Pane)**：用户的个人快捷工具栏。
+- **中部：当前分配区 (Current Assignment Pane)**：当前视频的标签状态总览。
+- **下部：标签库浏览区 (Library Browser Pane)**：标准的搜索与选择区域。
 
 
 
 ```
-graph TD
-    A[打开分配页面] --> B[加载 tags.json & 视频状态]
-    B --> C[渲染分组列表]
-    C --> D{用户行为}
-    
-    D -- 输入关键词搜索 --> E[过滤显示列表]
-    E -- 有结果 --> F[点击标签 Toggle 选中状态]
-    E -- 无结果 --> G[按 Enter 跳转创建页面]
-    
-    D -- 直接浏览 --> F
-    
-    F --> H[更新当前视频元数据]
-    G --> I[进入标签创建流程]
++----------------------------------------------------------------------------------+
+| 为当前视频分配标签                                                          [X]  |
++----------------------------------------------------------------------------------+
+| ┌──────────────────────────────────────────────────────────────────────────────┐ |
+| │ 常用标签 (Pinned)                                                            │ |
+| │ +--------------------+ +--------------------+                                 │ |
+| │ | 1 [img] 侧脸特写   ⓧ| | 2 [img] 微笑       ⓧ|  <- 可拖拽目标区域           │ |
+| │ +--------------------+ +--------------------+                                 │ |
+| └──────────────────────────────────────────────────────────────────────────────┘ |
++----------------------------------------------------------------------------------+
+| ┌──────────────────────────────────────────────────────────────────────────────┐ |
+| │ 已分配标签 (Assigned)                                                        │ |
+| │ +-----------------+  +-----------------+                                     │ |
+| │ | [img] 富士山  ⓧ |  | [img] 日落    ⓧ |                                     │ |
+| │ +-----------------+  +-----------------+                                     │ |
+| └──────────────────────────────────────────────────────────────────────────────┘ |
++----------------------------------------------------------------------------------+
+| [ 🔍 搜索标签库...                                                           ]   |
+|                                                                                  |
+|                [    通用标签过滤与展示组件 (可拖拽源)    ]                       |
+|                                                                                  |
++----------------------------------------------------------------------------------+
+|                                                               [ 取消 ] [ 确定 ]  |
++----------------------------------------------------------------------------------+
 ```
+
+#### 4. 核心交互工作流 (Core Interactive Workflow)
+
+1. **启动**：用户按下 Shift+G，对话框弹出。
+   - **常用标签区**加载用户已固化的标签列表。
+   - **已分配标签区**加载当前视频已拥有的标签。
+   - **标签库**加载所有标签，并自动排除掉**所有固化**和**所有已分配**的标签。
+2. **快捷分配 (Quick Assign)**：用户按下 1 键。
+   - **逻辑判断**：程序检查“常用标签”列表中第一个位置的标签（例如 侧脸特写）是否已在“已分配标签”区。
+   - **若未分配**：侧脸特写 标签会被添加到“已分配标签”区。
+   - **若已分配**：无任何操作。
+3. **常规分配 (Standard Assign)**：用户在搜索框输入 雪，从下方标签库中点击 雪景 标签。
+   - **交互结果**：雪景 标签从下方标签库消失，并出现在中部的“已分配标签”区。
+4. **取消分配 (Unassign)**：用户点击“已分配标签”区中 富士山 标签的 ⓧ 图标。
+   - **交互结果**：富士山 标签从“已分配标签”区消失，并重新出现在下方的标签库中。
+5. **固化常用标签 (Pin a Tag)**：用户在下方标签库中，**按住鼠标左键拖拽** 海滩 标签，并将其拖到最上方的“常用标签”区域后释放。
+   - **逻辑判断**：检查“常用标签”区是否已满10个。
+   - **若未满**：海滩 标签被添加到“常用标签”区的末尾，获得一个新的快捷键编号，并从下方标签库消失。
+   - **若已满**：弹出一个Toast提示“常用标签栏已满”。
+6. **取消固化 (Unpin a Tag)**：用户点击“常用标签”区中 微笑 标签的 ⓧ 图标。
+   - **交互结果**：微笑 标签从“常用标签”区消失，并重新出现在下方的标签库中。
+
+#### 5. 关键组件与逻辑详解 (Key Component & Logic Breakdown)
+
+- **固化常用标签区 (Pinned Favorites Pane)**
+  - **数据源**：一个独立的、全局持久化的列表（例如，保存在 setting.json 或一个新的 pinned_tags.json 文件中），存储固化标签的ID序列。
+  - **显示逻辑**：
+    - 每个标签卡片前都显示其对应的快捷键 (1-5, Q, W, E, R, ~)。
+    - 如果某个固化标签**已被当前视频分配**，则该标签卡片应**置灰**或降低透明度，以表示其“已激活”状态，但**绝不隐藏或打乱顺序**。
+    - 卡片带 ⓧ 图标用于“取消固化”。
+  - **拖拽目标**：此区域是可接受拖拽的目标（Drop Target）。
+- **已分配标签区 (Current Assignment Pane)**
+  - **数据源**：当前视频在 files.json 中的 tags 列表。
+  - **交互**：卡片带 ⓧ 图标用于“取消分配”。
+- **通用标签过滤与展示组件 (Library Browser Pane)**
+  - **拖拽源**：此组件内的所有标签卡片现在都是可拖拽源（Draggable Source）。
+  - **动态排除**：其 excluded_ids 属性接收一个**合并后**的ID集合，该集合是**“所有固化标签ID”**与**“所有已分配标签ID”**的并集。这确保了标签库中永远不会出现这两类标签。
+- **快捷键上下文与稳定性**
+  - 快捷键（1 到 ~）的映射关系是**固定**的，它只与标签在“固化常用标签”列表中的**位置**有关（第一个位置是1，第二个是2，以此类推）。
+  - **这种映射关系不受任何标签的显示状态（如因已分配而置灰）影响**。即使用户按下一个已置灰标签的快捷键，程序也只是判断为无效操作，而不会将该快捷键错误地分配给下一个可见的标签。
+
+#### 6. 数据流与持久化 (Data Flow & Persistence)
+
+1. **会话状态**：对话框在内存中维护两个列表：
+   - pinned_tags_session: 用户在本次会话中对常用标签的修改。
+   - assigned_tags_session: 用户在本次会话中对视频已分配标签的修改。
+2. **关闭逻辑**：
+   - **点击【确定】**：
+     - 将 pinned_tags_session 的最终状态写入全局配置文件。
+     - 将 assigned_tags_session 的最终状态写入 files.json。
+     - 关闭对话框。
+   - **点击【取消】**：
+     - 丢弃所有会话中的修改。
+     - 关闭对话框。
