--- a/功能/标签 - 创建.md
+++ b/功能/标签 - 创建.md
@@ -1,274 +1,123 @@
-### 1. 统一数据结构
+#### 1. 功能概述 (Feature Overview)
 
-无论是“图片标签”还是“文本标签”，在底层存储上完全一致。区别仅在于 imagePath 字段是否有值。
+“创建标签”是本软件知识管理体系的核心功能。它允许用户从视频的特定帧画面出发，创建一个包含**封面图片、全局唯一关键词、可选描述、并隶属于特定分组**的丰富标签。
 
-**JSON 模型 (Tag Object):**
+本功能的设计核心是**“上下文感知创建” (Context-Aware Creation)**。它通过一个集成的界面，让用户在输入新标签信息的同时，能实时参考“本视频已分配的标签”和“整个标签库的现有内容”，从而最大限度地避免重复创建，保证标签体系的整洁与高效。
 
-codeJSON
+#### 2. 触发机制 (Triggering Mechanism)
 
+该功能完全由鼠标在播放器视口中的操作触发，流程如下：
 
+1. 在视频播放器的主画面区域，用户**按下并按住鼠标左键**。
+2. **拖动鼠标**，一个半透明的矩形选框会随之出现。
+3. 用户框选出想要作为标签基础画面的区域后，**释放鼠标左键**。
+4. 释放后，“创建标签”对话框将立即以模态形式弹出。
+
+#### 3. UI 布局与设计原理 (UI Layout & Design Rationale)
+
+对话框采用**左右布局**。这种布局经过精心设计，旨在将“**创造性输入**”与“**参考性浏览**”两个核心任务并行处理，减少用户的视线移动和认知负荷。
+
+- **左侧：定义与创建区 (Creation Pane)**：用户在此区域完成新标签的所有数据输入。
+- **右侧：上下文与参考区 (Reference Pane)**：用户在此区域获取所有必要的参考信息，以辅助创建决策。
 
 ```
-{
-  "id": "Unique_ID (long/string)",
-  "groupName": "分组名称 (String)",
-  "texts": ["主关键词", "描述1", "描述2"], 
-  "imagePath": "String (Nullable)" 
-}
++----------------------------------------------------------------------------------+
+| 新建标签                                                                    [X]  |
++----------------------------------------------------------------------------------+
+| [ 左侧：定义与创建区 ]                      | [ 右侧：上下文与参考区 ]            |
+|                                             |                                  |
+| +-----------------------------------------+ | ┌────────────────────────────────┐ |
+| | [用户框选的视频画面]                    | | │ 本视频已分配标签 (3)             │ |
+| | (可通过 Ctrl+C 替换)                      | | │ ... (标签卡片) ...             │ |
+| +-----------------------------------------+ | │ └────────────────────────────────┘ |
+|                                             |                                  |
+| * 关键词 (必填)                             | │ ┌────────────────────────────────┐ |
+| [ 输入关键词以创建或过滤...               ] | │ │ 标签库 (过滤结果)              │ |
+|                                             | │ └────────────────────────────────┘ |
+| * 描述 (可选)                               | │ [ 通用标签过滤与展示组件 ]         │ |
+| [ 输入标签的详细描述...                   ] | │                                  │ |
+|                                             |                                  |
+| * 归属分组 (必填)                           | |                                  |
+| +-----------------------------------------+ | |                                  |
+| | [ 🔍 过滤或创建分组... ]                | | |                                  |
+| +-----------------------------------------+ | |                                  |
+| | 🏞️ 风景 (已选中)                      | | |                                  |
+| | 📘 人物                               | | |                                  |
+| | 🎬 影视                               | | |                                  |
+| | ... (可滚动列表) ...                    | | |                                  |
+| +-----------------------------------------+ | |                                  |
++---------------------------------------------+----------------------------------+
+|                                                               [ 取消 ] [ 确定 ]  |
++----------------------------------------------------------------------------------+```
++----------------------------------------------------------------------------------+
 ```
 
-- 
-- **texts**: 字符串数组。第一个元素通常作为主标签名显示，后续元素作为辅助描述或搜索关键词。
-- **imagePath**:
-  - 
-  - 若为 **路径字符串**：视为 **图片标签**（显示截图预览）。
-  - 若为 **null/空**：视为 **文本标签**（仅显示文字）。
-
-------
-
-
-
-### 2. 创建界面 UI 布局
-
-对话框分为上下两个核心区域，旨在将“创建”与“检索”融合，防止用户重复创建已存在的标签。
-
-#### 2.1 上半区域：输入与预览区 (Input Area)
-
-用户在此处定义新标签的内容。
-
-- 
-- **左侧（媒体位）**：
-  - 
-  - **图片标签模式**：显示当前框选区域的截图预览。
-  - **文本标签模式**：显示默认图标或留空。
-- **右侧（表单位）**：
-  - 
-  - **描述输入框**：支持输入多个文本（对应 texts 数组）。
-    - 
-    - *交互*：输入完一个词按 Tab 或 Enter 生成一个 Chip（胶囊块），支持删除。
-  - **分组选择器**：下拉框 + 输入框组合。
-    - 
-    - 支持选择现有分组，或直接输入新名称创建新分组。
-
-#### 2.2 下半区域：实时过滤提示区 (Suggestion Area)
-
-这是防止数据冗余的核心设计。
-
-- 
-- **触发逻辑**：监听上半区域“描述输入框”的每一次按键。
-- **显示内容**：
-  - 
-  - 根据用户当前输入的关键词，实时遍历检索现有的所有标签（匹配 texts 和 groupName）。
-  - 以列表或网格形式展示匹配到的**现有标签**（显示其缩略图、文字和所属分组）。
-- **交互目的**：
-  - 
-  - **查重**：提示用户“库里可能已经有这个标签了”。
-  - **快速复用**：如果用户发现下方出现了想要的标签，可以直接**点击**该标签。
-    - 
-    - *动作*：点击后，**放弃创建新标签**，直接将选中的**现有标签**分配给当前视频，并关闭对话框。
-
-------
-
-
-
-### 3. 操作流程 (Workflow)
-
-#### 场景 A：创建全新的标签
-
-1. 
-2. **触发**：
-   - 
-   - (图片) 框选画面 -> 按快捷键。
-   - (文本) 直接按快捷键。
-3. **输入**：在顶部输入关键词（如“海边”）。
-4. **观察**：下半区域显示“无匹配结果”或显示的内容与当前需求不符。
-5. **完善**：输入分组（如“风景”），确认其他描述。
-6. **提交**：按 Enter 或点击“创建并分配”。
-7. **结果**：系统生成新 ID，保存到 JSON，并关联到当前视频。
-
-#### 场景 B：复用现有标签（防重流程）
-
-1. 
-2. **触发**：用户想标记“海边”，触发创建框。
-3. **输入**：用户在顶部刚输入“海”。
-4. **发现**：下半区域实时刷新，跳出了一个已存在的标签（缩略图是之前的某次截图，文字包含“海滩、海边”，分组为“风景”）。
-5. **决策**：用户意识到无需新建，直接**点击**下方的这个旧标签。
-6. **结果**：对话框关闭，系统直接建立当前视频与该旧标签 ID 的关联。**不会产生新数据。**
-
-### 4. 内部处理逻辑
-
-1. 
-2. **截图处理（仅图片标签）**：
-   - 
-   - 在对话框弹出前，系统先将框选区域的图像数据暂存（内存或临时文件）。
-   - 只有当用户最终点击“创建新标签”时，才将图片正式保存到 tag_images/ 目录，并生成 imagePath。
-   - 若用户选择了复用下方旧标签，则丢弃暂存的截图，节省磁盘空间。
-3. **索引更新**：
-   - 
-   - 一旦新标签创建成功，TagIndexBuilder 需立即将新标签的 texts 和 groupName 加入搜索索引，确保下次搜索能立刻搜到。
-
-### 5. 总结
-
-
-
-
-
-
-
-
-
-| 区域       | 功能                          | 核心价值                                                     |
-| ---------- | ----------------------------- | ------------------------------------------------------------ |
-| **上半区** | 定义内容 (截图 + 文本 + 分组) | 生产数据，标准录入。                                         |
-| **下半区** | 实时检索 (Search-as-you-type) | **数据清洗前置化**。在源头拦截重复标签，鼓励复用，维护标签库的整洁性。 |
-
-
-
-
-
-### 1. 核心策略：标准化容器 + 智能填充 (Standardized Container)
-
-无论原图是横屏（16:9）、竖屏（9:16）还是超宽屏，在 UI 上必须强制使用统一的容器尺寸，以保证列表的整齐。
-
-#### 推荐方案：卡片式布局 (Card Layout)
-
-适用于 **“分配标签菜单” (Shift+T)** 或 **“标签管理库”** 界面。
-
-- **容器比例**：统一采用 **16:9** 或 **3:2** 的横向矩形（因为是视频管理软件，横向视觉更协调）。
-- **填充模式 (Object-Fit)**：采用 cover (覆盖/裁切)。
-  - **逻辑**：将图片等比缩放，填满容器，多余部分裁掉。
-  - **定位**：默认 center center（居中）。
-- **文字层**：在卡片底部叠加 **黑色半透明渐变蒙版**，白字显示标签名（如“富士山”）。
-
-> **为何不使用缩放 (Contain)？**
-> 如果使用 contain（显示全图，留黑边），对于细长的竖屏截图，中间只有一条细线，既看不清内容，也让界面显得破碎。cover 虽然会裁掉部分，但能保证视觉饱满。
-
-------
-
-
-
-### 2. 交互补偿机制 (Interaction & Compensation)
-
-为了解决 cover 模式可能裁掉关键部位（比如把“人物”标签的头裁掉了）的问题，需要增加交互反馈。
-
-#### A. 悬停全览 (Hover to Reveal)
-
-- **操作**：当鼠标悬停在标签卡片上超过 0.3秒。
-- **效果**：
-  - **方案一（简单）**：图片在卡片内部缩小至全貌 (object-fit: contain)，背景显示高斯模糊的该图片。
-  - **方案二（高级）**：弹出一个浮层（Tooltip），按原比例完整显示该图片（最大宽度限制在 300px 左右）。
-
-#### B. 智能对齐 (Smart Alignment - 可选进阶)
-
-如果在 files.json 或 tags.json 中允许记录额外数据，可以给图片增加一个 focus_point (关注点)。
-
-- **默认**：Center (50% 50%)。
-- **优化**：如果用户截的是竖屏全身像，系统默认居中可能只显示肚子。允许用户在设置标签封面时，简单点击一下“人脸位置”，记录 focus: "top"。CSS 中使用 object-position: top center;。
-
-------
-
-
-
-### 3. 不同场景的 UI 规范
-
-根据标签出现的位置，采用不同的显示策略：
-
-#### 场景 1：标签选择/管理网格 (Grid View)
-
-- **适用**：按 Shift+T 唤出的面板。
-
-- **样式**：**大卡片**。
-
-- **布局**：
-
-  codeCSS
-
-  ```
-  .tag-card {
-    width: 160px;
-    height: 90px; /* 16:9 */
-    border-radius: 8px;
-    overflow: hidden;
-    position: relative;
-  }
-  .tag-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* 关键属性 */
-    transition: transform 0.2s;
-  }
-  .tag-card:hover .tag-image {
-    transform: scale(1.1); /* 悬停微放大，增加由于感 */
-  }
-  ```
-
-#### 场景 2：视频下方的已选标签 (Detail View)
-
-- **适用**：视频播放界面下方的元数据栏。
-
-- **样式**：**胶囊/芯片样式 (Chips)**。
-
-- **布局**：
-
-  - 左侧为圆形或圆角正方形头像（Avatar），右侧为文字。
-  - 头像区域非常小（如 24x24px），强制使用 object-fit: cover。
-  - 此时图片仅作为“图标”存在，主要靠文字识别。
-
-  codeCSS
-
-  ```
-  .tag-chip {
-    display: flex;
-    align-items: center;
-    background: #333;
-    padding-right: 10px;
-    border-radius: 16px;
-  }
-  .tag-chip img {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%; /* 圆形 */
-    object-fit: cover;
-    margin-right: 8px;
-  }
-  ```
-
-------
-
-
-
-### 4. 极端情况兜底 (Edge Cases)
-
-有些用户截图可能极度不规范（例如 100x2000 的长条图，或者 50x50 的像素图）。
-
-1. **图片缺失**：
-   - 如果 tag_images 目录下找不到对应的 ID 图片。
-   - **UI**：显示一个带有首字（如“风”）的纯色背景块，或者通用 Placeholder 图标。
-2. **分辨率过低**：
-   - CSS 设置 image-rendering: pixelated 避免模糊，或者接受模糊作为一种朦胧美。
-3. **分辨率过高**：
-   - 软件在加载标签图时，建议在内存中生成缩略图（Cache），不要直接渲染 4K 截图到 160px 的卡片上，否则几十个标签会导致界面卡顿。
-
-### 5. 总结建议
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-| 功能点         | 建议方案                                              |
-| -------------- | ----------------------------------------------------- |
-| **默认显示**   | **16:9 卡片，CSS object-fit: cover (居中裁切)**       |
-| **视觉一致性** | 强制统一宽高，底部叠加半透明黑色渐变以衬托白色文字    |
-| **内容查看**   | **鼠标悬停 (Hover)** 时，在卡片上方浮出完整比例缩略图 |
-| **列表模式**   | 使用 **圆形头像 + 文字** 的胶囊样式 (Chips)           |
-| **技术实现**   | 纯 CSS 即可解决，无需复杂的 JS 裁剪算法               |
+#### 4. 核心交互工作流 (Core Interactive Workflow)
+
+1. **启动**：用户通过拖拽释放操作，打开对话框。左侧的封面预览会自动填充为用户框选的画面。
+2. **输入与过滤**：用户将焦点置于左侧的“关键词”输入框，开始输入，例如 樱花。
+3. **实时反馈**：在用户输入的同时，右侧的“通用标签过滤与展示组件”会**立即**根据输入内容 樱花 进行过滤，实时展示出标签库中所有包含“樱花”的已有标签，例如 夜樱、樱花大道 等。
+4. **决策**：
+   - **情况A (发现重复)**：用户看到已有非常相似的标签，决定放弃创建。他可以点击【取消】关闭对话框。
+   - **情况B (继续创建)**：用户确认自己要创建的标签（如 樱花特写）是新的。他继续完成信息填写。
+5. **补充信息**：用户可以按需填写“描述”区域，并从“归属分组”的组合框中选择一个已有分组，或直接输入一个全新的分组名。
+6. **替换封面 (可选)**：如果用户对框选的画面不满意，可以在任意时刻复制一个图片URL或本地图片文件路径，然后激活对话框窗口，按下 Ctrl+C。系统会自动检测剪贴板内容，若合法，则将左侧的封面预览替换为新图片。
+7.  **选择分组**：用户将视线移到左下方的“归属分组”区域。所有现有的分组已经**直接展示**出来。    
+   1.  **直接选择**：用户可以直接在列表中点击一个已有分组（如 `风景`）来完成选择。    
+   2. **过滤选择**：如果分组很多，用户可以在顶部的搜索框中输入 `人`，列表会立即筛选出 `人物` 分组，然后点击选择。    
+   3.  **创建新分组**：用户在搜索框中输入了一个全新的名字，如 `地点`，列表会提示创建新分组的选项，点击即可“预选”这个新分组。
+8. **提交**：用户点击【确定】按钮。系统将执行严格的验证，通过后完成标签的创建和分配。
+
+#### 5. 关键组件详解 (Key Component Breakdown)
+
+- **封面预览区**
+  - **默认内容**：用户在视频上框选的画面。
+  - **替换机制 (Ctrl+C)**：当对话框处于激活状态且焦点不在输入框内时，Ctrl+C 会被拦截。系统会检查剪贴板内容：
+    - 如果是合法的图片URL，则尝试下载并替换预览。
+    - 如果是本地文件路径且指向一张图片，则加载并替换预览。
+    - 否则，无操作。
+- **统一关键词输入框**
+  - **双重职责**：它既是**新标签的名称输入框**，也是驱动右侧标签库进行**实时过滤的控制器**。这是整个设计的核心，确保了输入与参考的无缝衔接。
+  - **验证**：提交时，其内容必须全局唯一（不区分大小写）。
+- **归属分组组合框 (ComboBox)**
+  1.  **结构**:    
+     1.  **顶部输入框**: 一个始终可见的文本输入框，其占位符为 `[🔍 过滤或创建分组...]`。    
+     1.  **下方列表区**: 一个可滚动的列表，默认显示所有已创建的标签分组。 
+  2. **交互逻辑**:    
+     1.   **过滤 (Filtering)**：当用户在顶部输入框中键入文字时，下方的列表会**实时过滤**，仅显示名称包含输入文本的分组。    
+     2.   **选择 (Selecting)**：        
+        -   用户可以直接用鼠标**点击**列表中的任意一个分组项来选中它。        
+        -   被选中的项会有一个清晰的**高亮背景**，表示当前选择。    
+     3.  **创建 (Creating)**：这是此组件设计的精髓。       
+        - 当用户在输入框中输入的文本**在现有分组中无任何匹配项**时，列表内容会发生变化。        
+        -  列表的第一行（也可能是唯一一行）会变成一个特殊的、可点击的选项，例如：**`+ 创建新分组 "地点"`**。        
+        -  用户点击这个特殊选项，就相当于“选中”了这个尚未创建的新分组。在视觉上，这个特殊选项也会被高亮。 
+        -  **状态管理**：该组件内部始终维护一个“当前选中值”。这个值要么是一个已存在的的分组名，要么是将要创建的新分组名字符串。这个状态将用于最终的提交验证。
+- **本视频已分配标签区**
+  - **目的**：提供直接的上下文，防止用户为视频重复打上语义相近的标签。
+  - **交互**：每个标签卡片右下角带有一个 ⓧ 图标，点击可立即将该标签从此视频中移除（取消分配）。
+
+#### 6. 验证与提交逻辑 (Validation & Submission Logic)
+
+当用户点击【确定】按钮时，系统会依次执行以下检查：
+
+1. **关键词检查**：
+   - 是否为空？-> 若是，则阻止提交，并提示用户填写。
+   - 是否已在全局标签库中存在？-> 若是，则阻止提交，并高亮提示关键词冲突。
+2. **分组检查**：
+   - 用户是否已选择或输入了一个分组名？-> 若否，则阻止提交，并提示用户必须指定分组。
+
+所有检查通过后，执行以下操作：
+
+1. **数据持久化** (详见下一节)。
+2. **自动分配**：新创建的标签会自动分配给当前视频。
+3. 关闭对话框，并可能弹出一个全局的Toast提示“标签创建成功”。
+
+#### 7. 数据处理与持久化 (Data Handling & Persistence)
+
+1. **生成ID**：系统计算出当前 tags.json 中最大的标签ID，将其加1作为新标签的ID。这个ID将永不复用。
+2. **保存封面**：将预览区最终确认的图片（无论是来自视频截图还是粘贴）保存到 data/tag_images/ 目录下，并命名为 [新ID].webp。
+3. **更新 tags.json**：
+   - 如果用户输入了新的分组名，则先在JSON中创建该分组的键和空数组。
+   - 将包含新标签 {id, keywords, description} 的对象追加到对应分组的数组中。
+4. **更新 files.json**：找到当前视频的条目，将新标签的ID追加到其 tags 数组中。
