--- a/功能/标签 - 搜索.md
+++ b/功能/标签 - 搜索.md
@@ -1,117 +1,94 @@
-### 1. 痛点与动机
+#### 1.功能概述 (Feature Overview)
 
-- 
-- **痛点**：
-  - 
-  - **文件名局限**：文件名无法包含所有细节（如“海边的日落”可能只被命名为 IMG_001.mp4）。
-  - **维度单一**：文件夹分类互斥，一个视频只能在一个文件夹，无法同时属于“风景”和“人像”。
-  - **检索困难**：用户记得画面内容（如“那个有红色跑车的视频”），但无法通过文字搜索找到。
-- **动机**：
-  - 
-  - 利用**语义化元数据**实现精准检索。
-  - 提供**“视觉索引”**：让用户通过点击熟悉的图片标签（截图）来查找视频，比回忆文字更直观。
-  - 支持**多条件筛选**（交集逻辑），快速缩小查找范围。
+**标签搜索**是本软件从海量视频库中精准定位内容的核心入口。它提供了一个强大而直观的界面，允许用户通过**组合一个或多个标签**作为筛选条件，来查找所有**同时拥有**这些标签的视频。
 
-### 2. 功能概要
+该页面的设计遵循了“**逐步筛选，即时反馈**”的原则。用户的每一步标签选择都会被清晰地展示，并且可以随时在“选择条件”和“查看结果”两个模式间无缝切换，确保了搜索过程的灵活性和高效性。
 
-- 
-- **基于标签筛选**：从已有的标签库中选择一个或多个标签，过滤出包含这些标签的视频。
-- **可视化筛选器**：复用“标签分配页面”的 UI 逻辑，按分组展示所有标签，支持图片标签的缩略图展示。
-- **动态列表**：筛选结果实时更新，并构成一个临时的播放列表。
+#### 2. 页面访问 (Page Access)
 
-### 3. UI 布局与交互
+用户通过点击主界面顶部导航栏中的【标签搜索】页签，即可进入此功能页面。
 
-#### 3.1 入口位置
+#### 3. UI 布局与设计原理 (UI Layout & Design Rationale)
 
-- 
-- **页签按钮**：位于 **精品列表按钮** 的后面，**文件名搜索按钮** 的前面（属于核心检索功能区）。
+页面整体采用**上下布局**，这种结构清晰地划分了“**条件定义区**”和“**内容展示区**”，符合用户进行搜索操作时的线性心智模型。
 
-#### 3.2 界面结构
+- **上部：搜索条件区 (Criteria Pane)**：用户在此区域构建他们的搜索查询。
+- **下部：动态内容区 (Dynamic Content Pane)**：该区域根据用户的交互焦点，智能地在“标签选择器”和“视频结果”之间切换。
 
-界面分为左右（或上下）两部分：**筛选控制区** 和 **结果展示区**。
+codeCode
 
-**A. 筛选控制区 (Tag Picker)**
-类似于“标签分配”页面的只读版本，作为筛选器使用。
+```
++----------------------------------------------------------------------------------+
+| [ 标签搜索 ]                                                                     |
++----------------------------------------------------------------------------------+
+| ┌──────────────────────────────────────────────────────────────────────────────┐ |
+| │ [ 🔍 添加或搜索标签... ]                                                     │ |
+| │ +-----------------+  +-----------------+                                     │ |
+| │ | [img] 富士山  ⓧ |  | [img] 日落    ⓧ |  <- 已选标签胶囊 (Pills)           │ |
+| │ +-----------------+  +-----------------+                                     │ |
+| └──────────────────────────────────────────────────────────────────────────────┘ |
++----------------------------------------------------------------------------------+
+|                                                                                  |
+|                [    动态内容区 (标签选择器 或 视频结果网格)    ]                 |
+|                                                                                  |
++----------------------------------------------------------------------------------+
+```
 
-- 
-- **搜索框**：用于快速查找特定标签。
-- **分组展示**：按 groupName 归类展示所有标签。
-- **标签单元**：
-  - 
-  - **文本标签**：显示文字胶囊。
-  - **图片标签**：显示截图卡片（直观的视觉索引）。
-- **状态**：
-  - 
-  - **未选中**：默认样式。
-  - **已选中**：高亮/打钩状态，表示当前筛选条件包含此标签。
+#### 4. 核心交互工作流 (Core Interactive Workflow)
 
-**B. 结果展示区 (Results Grid)**
+1. **进入页面**：用户进入“标签搜索”页面。上方的搜索条件区是空的，下方的动态内容区默认显示“通用标签过滤与展示组件”。
+2. **选择第一个标签**：
+   - 用户在下方的标签库中点击 富士山 标签。
+   - **交互结果**：
+     - 富士山 标签会以一个带 ⓧ 的“胶囊”(Pill) 形式出现在上方的搜索条件区。
+     - 下方的标签库会**保持显示**，方便用户继续添加更多标签。
+3. **组合筛选 (AND Logic)**：
+   - 用户接着在下方的标签库中点击 日落 标签。
+   - **交互结果**：日落 标签的胶囊也会被添加到上方的搜索条件区。此时，搜索条件变为“富士山 **AND** 日落”。
+4. **查看结果**：
+   - 用户完成了标签的选择，想要查看搜索结果。他只需将**鼠标点击页面上的任何非交互区域**（例如空白处），或者按下 Esc 键，让上方的输入框**失去焦点**。
+   - **交互结果**：
+     - 下方的动态内容区会**平滑地切换**，从“通用标签过滤与展示组件”变为一个标准的**视频网格 (Grid)**。
+     - 这个网格中只显示同时拥有 富士山 和 日落 这两个标签的视频。
+5. **修改条件**：
+   - 用户想调整搜索条件。他只需**再次点击**上方的搜索输入框，使其**重新获得焦点**。
+   - **交互结果**：下方的动态内容区会**立即切换回**“通用标签过滤与展示组件”，供用户继续选择或移除标签。
+6. **移除条件**：用户点击上方 富士山 胶囊旁边的 ⓧ 图标。该胶囊消失，搜索条件更新。如果此时下方是视频结果区，结果也会实时刷新。
 
-- 
-- **布局**：标准的 Grid 网格视图（同最新/精品列表）。
-- **内容**：显示符合筛选条件的视频缩略图、文件名、时长。
-- **空状态**：若组合条件无匹配视频，显示提示“未找到符合条件的视频”。
+#### 5. 关键组件与逻辑详解 (Key Component & Logic Breakdown)
 
-### 4. 筛选逻辑 (Core Logic)
+- **搜索条件区 (Criteria Pane)**
+  - **输入框**:
+    - 其主要作用是**控制焦点**，以切换下方内容区的模式。
+    - 同时，它的输入内容也会作为 filter_keyword 传递给下方的标签选择器，用于过滤标签库。
+  - **已选标签胶囊 (Pills)**:
+    - **功能**: 直观地展示当前生效的搜索条件。
+    - **逻辑**: 所有胶囊代表的标签之间是 **AND** (与) 关系。
+    - **交互**: 每个胶囊都带有一个 ⓧ 图标，用于移除该筛选条件。
+- **动态内容区 (Dynamic Content Pane)**
+  - 这是整个页面的核心，它的显示内容由上方输入框的**焦点状态 (focus state)** 决定。
+  - **当输入框获得焦点时 (Focus In)**:
+    - 显示“**通用标签过滤与展示组件**”。
+    - 该组件的 excluded_ids 属性绑定到上方已选标签胶囊的ID列表，确保用户不会重复选择同一个标签。
+  - **当输入框失去焦点时 (Focus Out)**:
+    - 显示“**视频结果网格**”。
+    - 系统会根据上方已选的标签胶囊，对 files.json 进行过滤，找出所有 tags 数组包含了**全部**已选标签ID的视频，并将它们渲染出来。
+- **搜索逻辑 (Search Logic)**
+  - **核心**: 实现一个高效的交集运算。
+  - 当用户选择 [tag_A, tag_B, tag_C] 时，程序需要遍历 files.json 中的每一个视频条目，检查其 tags 数组是否同时包含 tag_A.id, tag_B.id, 和 tag_C.id。
+  - 为了性能，可以预先为每个标签建立一个包含该标签的视频Hash列表的索引，搜索时直接对这些列表求交集。
 
-#### 4.1 多标签逻辑：交集 (AND)
+#### 6. 数据流与状态管理 (Data Flow & State Management)
 
-默认采用**交集**逻辑，以实现“精准定位”。
-
-- 
-- **场景**：用户先点击了“风景”标签，又点击了“雪山”标签。
-- **结果**：只显示**同时拥有**“风景”**和**“雪山”这两个标签的视频。
-- *逻辑公式*：Result = Set(Tag_A) ∩ Set(Tag_B)。
-- *理由*：随着标签增多，用户通常希望缩小范围找到特定视频，而不是扩大范围。
-
-#### 4.2 实时响应
-
-- 
-- 每点击（选中/取消选中）一个标签，右侧结果区域立即重新计算并刷新。
-
-### 5. 播放列表联动
-
-- 
-- **上下文切换**：
-  - 
-  - 当用户在筛选结果中双击一个视频时：
-    1. 
-    2. 播放器加载该视频。
-    3. 内部播放列表状态切换为 **“标签搜索列表”**。
-- **自动连播**：
-  - 
-  - 当前视频播放结束后，自动播放筛选结果中的下一个视频。
-  - *场景*：用户筛选“健身教程”标签，然后可以放下鼠标，连续看完所有相关视频。
-
-### 6. 数据处理
-
-- 
-- **数据源**：
-  - 
-  - 读取 tags.json 构建筛选器 UI。
-  - 读取 files.json 中的 assigned_tag_ids 字段进行匹配计算。
-- **性能优化**：
-  - 
-  - 由于是内存计算（In-Memory），即使有几千个视频，交集运算也极快。
-  - 建议建立倒排索引（Inverted Index）：Map<TagID, List<VideoHash>>，避免每次筛选都遍历所有视频。
-
-### 7. 总结：三种搜索/列表方式对比
-
-
-
-
-
-
-
-
-
-
-
-
-
-| 特性         | 标签搜索 (Tag Search)      | 文件名搜索 (Filename Search) | 自动列表 (Random/Newest...) |
-| ------------ | -------------------------- | ---------------------------- | --------------------------- |
-| **检索依据** | **内容/语义** (用户标注)   | **元信息** (文件名)          | **属性** (时间/随机)        |
-| **筛选方式** | 点击标签 (可视化)          | 输入文字 (模糊匹配)          | 自动聚合                    |
-| **主要优势** | **精准、跨文件夹、视觉化** | 查特定番号/集数              | 浏览、探索                  |
-| **结果逻辑** | 交集 (AND)                 | 模糊包含 (Like)              | 排序 (Order By)             |
+1. **页面状态 (State)**：该页面主要维护两个核心状态：
+   - selected_tags: 一个数组，存储当前在上方条件区显示的所有标签对象。
+   - is_input_focused: 一个布尔值，记录搜索输入框的当前焦点状态。
+2. **模式切换**：is_input_focused 的值是决定下方动态内容区显示哪个组件的**唯一依据**。
+3. **数据联动**：
+   - selected_tags 数组的变化会实时反映在UI上（胶囊的增减）。
+   - 当 is_input_focused 为 false 时，selected_tags 的变化会触发视频结果的重新计算和渲染。
+   - 当 is_input_focused 为 true 时，selected_tags 中所有标签的ID会被传递给“通用标签过滤与展示组件”的 excluded_ids 属性。
+4. **事件处理**：
+   - 监听“通用标签过滤与展示组件”的 tag-click 事件，将接收到的标签添加到 selected_tags 数组中。
+   - 监听输入框的 focus 和 blur 事件，来切换 is_input_focused 的状态。
+   - 监听胶囊上 ⓧ 的点击事件，从 selected_tags 数组中移除对应的标签。
