--- a/鸟瞰/目录树.md
+++ b/鸟瞰/目录树.md
@@ -35,79 +35,131 @@ data目录位于软件根目录下
 
 #### A. setting.json (配置)
 
-```json
+```
 {
-  "paths": {
-    "video_source": "D:/Videos/MyCollection",         // 视频源根目录
-    "pending_delete_path": "D:/Videos/Trash_Bin",     // 待删除目录 (软删除)
-    "processed_path": "D:/Videos/Edited_Done",        // 裁剪后的原片归档
-    "screenshot_export_path": "C:/Users/Admin/Desktop/Export" // 截图导出目录
-  },
-  "playback": {
-    "global_volume": 80,             // 全局音量 (0-100)
-    "like_decay_rate": 0.2           // 点赞衰减系数
-  },
-  "skip_frame": {                    // 跳帧播放配置
-    "skip_duration": 2,              // 每帧停留2秒
-    "rules": {
-      "60s": 0,                      // 1分钟内: 正常播放 (0段)
-      "30m": 10,                     // 1-30分钟: 分10段
-      "120m": 30,                    // 30-120分钟: 分30段
-      "10000m": 60                   // 2小时以上: 分60段
-    }
-  },
   "key_bindings": {
-     "view_nav": {                    // -------- [1-6] 列表/数据源切换 --------
-      "list_recent": "1",            // 切换到: [最近播放] 历史记录
-      "list_newest": "2",            // 切换到: [最新入库] 按修改时间倒序
-      "list_search": "3",            // 切换到: [文件名搜索] 激活搜索框
-      "list_random": "4",            // 切换到: [随机推荐] 猜你喜欢
-      "list_liked": "5",             // 切换到: [点赞列表] 评分较高的
-      "list_elite": "6"              // 切换到: [精品列表] 手动精选/收藏
+    // ===================================================================
+    //  全局上下文 (Global Context)
+    //  当没有特定对话框或模式激活时，这些快捷键生效。
+    // ===================================================================
+    "global": {
+      // -------- [1-6] 列表/数据源切换 --------
+      "view_nav": {
+        "list_recent": "1",            // 切换到: [最近播放] 历史记录
+        "list_newest": "2",            // 切换到: [最新入库] 按修改时间倒序
+        "list_search": "3",            // 切换到: [文件名搜索] 激活搜索框
+        "list_random": "4",            // 切换到: [随机推荐] 猜你喜欢
+        "list_liked": "5",             // 切换到: [点赞列表] 评分较高的
+        "list_elite": "6"              // 切换到: [精品列表] 手动精选/收藏
+      },
+
+      // -------- [WASD] 播放控制 --------
+      "play_control": {
+        "toggle_play": "Space",        // 播放/暂停
+        "step_backward": "A",          // 后退 (步进)
+        "step_forward": "D",           // 前进 (步进)
+        "volume_up": "W",              // 音量 + (W向上)
+        "volume_down": "S",            // 音量 - (S向下)
+        "rotate_video": "Alt+R"        // 旋转视频 (顺时针旋转)
+      },
+
+      // -------- [E/R] 采集与录制 --------
+      "capture": {
+        "screenshot": "E",                          // 截图
+        "export_screenshot": "Ctrl+E",              // 智能导出截图 (已配置则直接导出)
+        "export_screenshot_with_dialog": "Alt+E",   // 强制配置并导出截图
+        "record_clip": "R",                         // 开始/停止录制片段
+        "cancel_record": "Shift+R"                  // 取消当前录制 (不保存)
+      },
+
+      // -------- [F/G] 评分与反馈 --------
+      "interact": {
+        "like": "F",                   // 点赞 (热度+)
+        "favorite": "Shift+F",         // 收藏 (加入精品列表)
+        "dislike": "G"                 // 不喜欢/降权
+      },
+
+      // -------- [Q/T] 剪辑与标签 --------
+      "edit_tag": {
+        "toggle_track": "Tab",         // 唤出/隐藏 底部剪辑轨道
+        "cut_segment": "Q",            // 剪一刀 (分割片段)
+        "merge_segments": "Shift+Q",   // 合并选中片段
+        "create_tag_from_selection": "T", // 从选区创建新标签 (弹出创建对话框)
+        "open_assign_tag_dialog": "Shift+G", // 打开“分配标签”对话框 (使用Shift+G)
+        "quick_tag_1": "Alt+1",        // 快速分配常用标签组1
+        "quick_tag_2": "Alt+2"         // 快速分配常用标签组2
+      },
+
+      // -------- 系统与通用 --------
+      "system": {
+        "refresh": "F5",               // 刷新元数据/界面
+        "soft_delete": "Ctrl+Delete",  // 软删除文件
+        "back_to_player": "Esc"        // 从列表返回当前播放器视图
+      }
     },
 
-    "play_control": {                // -------- [WASD] 播放控制 --------
-      "toggle_play": "Space",        // 播放/暂停
-      "step_backward": "A",          // 后退 (步进)
-      "step_forward": "D",           // 前进 (步进)
-      "volume_up": "W",              // 音量 + (W向上)
-      "volume_down": "S",            // 音量 - (S向下)
-      "rotate_video": "Alt+R"        // 旋转视频 (顺时针旋转)
-    },
-
-    "capture": {                     // -------- [E/R] 采集与录制 --------
-      "screenshot": "E",                          // 截图 (生成 Hash_i.webp)
-      "export_screenshot": "Ctrl+E",               // 已设置过截图旋转的话，无须确认直接导出 (另存为/外部使用)
-      "export_screenshot_with_dialog": "Alt+E",  // 强制弹出设置截图旋转弹窗 (另存为/外部使用)
-      "record_clip": "R",                         // 开始/停止录制片段
-      "cancel_record": "Shift+R"                  // 取消当前录制 (不保存)
-    },
-
-    "interact": {                    // -------- [F] 评分与反馈 --------
-      "like": "F",                   // 点赞 (Pay respects / 热度+)
-      "favorite": "Shift+F",         // 收藏 (加入收藏夹)
-      "dislike": "G"                 // 不喜欢/降权 (放在F旁边)
-    },
-
-    "edit_tag": {                    // -------- [Q/T] 剪辑与标签 --------
-      "toggle_track": "Tab",         // 唤出/隐藏 底部剪辑轨道
-      "cut_segment": "Q",            // 剪一刀 (分割片段)
-      "merge_segments": "Shift+Q",   // 合并选中片段 
+    // ===================================================================
+    //  “分配标签”对话框上下文 (Assign Tag Dialog Context)
+    //  仅当“分配标签”对话框打开并处于激活状态时，这些快捷键才生效。
+    // ===================================================================
+    "dialog_assign_tag": {
+      // -------- 快速分配最近使用过的标签 --------
+      "quick_assign_tags": {
+        "slot_1": "1",                 // 分配最近标签槽位 1
+        "slot_2": "2",                 // 分配最近标签槽位 2
+        "slot_3": "3",                 // 分配最近标签槽位 3
+        "slot_4": "4",                 // 分配最近标签槽位 4
+        "slot_5": "5",                 // 分配最近标签槽位 5
+        "slot_6": "Q",                 // 分配最近标签槽位 6
+        "slot_7": "W",                 // 分配最近标签槽位 7
+        "slot_8": "E",                 // 分配最近标签槽位 8
+        "slot_9": "R",                 // 分配最近标签槽位 9
+        "slot_10": "~"                 // 分配最近标签槽位 10 (波浪号键)
+      },
       
-      "create_text": "T",            // 创建文本标签 (Text)
-      "assign_tag": "Shift+T",       // 唤出分配标签菜单
-      "quick_tag_1": "Alt+1",        // 快速分配常用标签组1
-      "quick_tag_2": "Alt+2"         // 快速分配常用标签组2
-    },
-
-    "system": {                      // -------- 系统与通用 --------
-      "refresh": "F5",               // 刷新元数据/界面
-      "soft_delete": "Ctrl+Delete"  // 软删除文件 (移入pending_delete_path目录)
-       "back_to_player": "Esc"        // 从列表返回当前播放器视图
+      // -------- 对话框通用操作 --------
+      "system": {
+        "confirm": "Enter",            // 确认分配并关闭对话框
+        "cancel": "Esc"                // 取消操作并关闭对话框
+      }
     }
+    // 未来可在此处添加更多上下文，如 "dialog_create_tag": { ... }
   }
 }
 ```
+
+------
+
+
+
+##### **结构变更详解**
+
+1. **引入“上下文 (Contexts)”**:
+   - key_bindings 的直接子级不再是功能分类（如 view_nav），而是代表不同UI状态的“上下文”，例如：global 和 dialog_assign_tag。
+2. **global 上下文**:
+   - 这是应用的**默认快捷键上下文**。
+   - 所有原有的快捷键配置都被整体移动到了 global 内部。
+   - 当应用处于主播放器界面，没有任何模态对话框弹出时，快捷键引擎会从此上下文中查找并执行命令。
+3. **dialog_assign_tag 上下文**:
+   - 这是一个**全新的、特定于“分配标签”对话框的上下文**。
+   - 当“分配标签”对话框**打开并获得焦点**时，快捷键引擎会**优先**从此上下文中查找命令。
+   - **quick_assign_tags**:
+     - 这个新的分类专门用于定义“最近分配的标签”的快捷键。
+     - slot_1 到 slot_10 是逻辑名称，程序会将它们与“最近分配列表”中从上到下的10个标签一一对应。
+     - 这里我们精确地配置了您指定的 1-5, Q, W, E, R, 和 ~ 键。
+   - **system**:
+     - 我们还可以在特定上下文中定义通用的系统行为，例如在此对话框中，Enter 键用于确认，Esc 用于取消。
+
+##### **应用程序如何处理这种新结构**
+
+这种结构变化意味着应用程序的快捷键处理逻辑需要更新为：
+
+1. **识别当前上下文**：应用程序必须时刻知道当前哪个“上下文”是激活的。默认是 global。当用户按下 G 打开分配标签对话框时，激活的上下文立即切换为 dialog_assign_tag。
+2. **分层查找 (Priority Lookup)**：当一个按键被按下时（例如用户按下了 1 键）：
+   - **Step 1**: 程序检查当前激活的特定上下文，即 dialog_assign_tag。
+   - **Step 2**: 它在 dialog_assign_tag 的绑定中查找 1。它找到了 "slot_1": "1"。
+   - **Step 3**: 程序执行 slot_1 对应的动作（即为视频分配最近列表中的第一个标签），**查找过程结束**。它不会再去检查 global 上下文。
+3. **回退机制 (Fallback)**：如果在 dialog_assign_tag 上下文中**没有**找到对应的快捷键（例如，用户按下了 F 键），程序可以设计为**回退**到 global 上下文中继续查找。不过，对于模态对话框，通常会禁用大部分全局快捷键以避免意外操作。
 
 #### B. files.json (视频元数据)
 
