--- a/鸟瞰/软件名.md
+++ b/鸟瞰/软件名.md
@@ -1,22 +1,36 @@
-#### 中文名
+### **GoReel **
 
-片遇
+- **中文名**: 片遇
+- **英文名**: GoReel
+- **Git 仓库名**: go_reel
 
+#### **1. 核心技术栈 (Core Technology Stack)**
 
+- **框架**: Electron
+- **语言**: TypeScript
+- **UI**: React
+- **脚手架与构建**: electron-vite
 
-#### 英文名
+#### **2. 关键库选型 (Key Library Selections)**
 
-GoReel
+- **UI 组件库**: **Mantine**
+  - *理由: 提供全面的高质量组件与 Hooks，开发体验极佳。*
+- **视频播放核心**: **mpv.js**
+  - *理由: 原生级性能与格式兼容性 (硬件加速, 旋转)，通过 Canvas 在渲染进程集成。*
+- **视频处理辅助**: **fluent-ffmpeg & ffmpeg-static**
+  - *理由: 用于截图、元数据读取等非播放任务。*
+- **全局状态管理**: **Zustand**
+  - *理由: 极简高效的 Hooks-based 状态管理方案。*
+- **数据持久化**: **JSON 文件** (搭配 write-file-atomic)
+  - *理由: 在预估数据规模下（核心元数据 ~1k, 标签 ~300）性能足够，开发简便。write-file-atomic 用于保证数据写入安全。*
+- **日志**: **electron-log**
+  - *理由: 为生产环境的应用提供可靠的日志记录能力，便于调试和错误追踪。*
 
+#### **3. 核心架构模式 (Core Architectural Patterns)**
 
-
-#### Git仓库名
-
-go_reel
-
-
-
-#### 技术选型
-
-TypeScript + React + Electron + FFmepg
-
+- **进程间通信 (IPC)**: **Context Bridge 模式**
+  - *架构: 通过 preload 脚本暴露安全的 API (window.api)，实现渲染进程与主进程的隔离通信。*
+- **播放器集成**: **mpv.js + 自定义 React UI**
+  - *架构: mpv.js 负责在 <canvas> 上进行“无头”视频渲染，所有 UI 控件（进度条、按钮等）均由 Mantine 和 React 在其上层独立构建和控制。*
+- **快捷键管理**: **上下文敏感绑定**
+  - *架构: setting.json 中按 UI 上下文 (global, dialog_...) 对快捷键进行分组，实现动态加载与按键覆盖。*
